@@ -623,3 +623,6 @@ different panes. Tie/untie option added for notes. Broken rhythm
 - Fixed: Some users could not export a PDF because the ghostscript path was a byte string instead of a unicode string. Now the path is coverted to unicode.
 - Fixed: Printing caused a black page.
 - Fixed: Render issue with Python 3.10 (cast to int was needed, thanks robertmuth) https://github.com/jwdj/EasyABC/issues/53
+- Fixed: Removed loading of NONEXISTANT_FILE for all players except wxmediaplayer
+- Added 'Insert musical symbol' again to the menu again which was removed in 1.3.8.4. Although ABC Assist can insert musical with less hassle, some users really like the old
+  menu version. For Linux (Gnome) users these menus are still empty but that is caused by Gnome, not EasyABC.
